--- a/style.css
+++ b/style.css
@@ -43,3 +43,17 @@ main {
 input{
     font-size: 20px;
 }
+header
+{
+    padding-top: 0.002em;
+    height: 15vh;
+    background-color: black;
+}
+footer
+{
+    padding-top: 1em;
+    background-color: black;
+    text-align: end;
+    height: 6vh;
+    
+}
