--- a/style.css
+++ b/style.css
@@ -14,9 +14,16 @@ span {
     font-weight: bold;
 
 }
+.content {
+    margin-top: 20px;
+   flex: 1;
+}
 button {
     font-size: 30px;
     cursor: pointer;
+    border-radius: 10px;
+    padding: 5px 5px;
+    border: none;
     background-color: #0088cc;
     border-color: #0088cc;
     color: white;
@@ -41,6 +48,7 @@ main {
     align-items: center;
 }
 input{
+    margin-left: 50px;
     font-size: 20px;
 }
 header
